--- a/instagram-app/src/components/PostContainer/postContainer.css
+++ b/instagram-app/src/components/PostContainer/postContainer.css
@@ -29,3 +29,23 @@
     margin-bottom: 0;
     overflow: hidden;
 } 
+.reaction {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    font-weight: bold;
+    padding: 1rem;
+}
+.post__icons {
+    font-size: 1.5rem;
+}
+.timestamp{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    color: gray;
+    margin-bottom: 1rem;
+    padding: 1rem;
+}
