--- a/instagram-app/src/components/PostContainer/postContainer.css
+++ b/instagram-app/src/components/PostContainer/postContainer.css
@@ -46,6 +46,6 @@
     justify-content: flex-start;
     align-items: flex-start;
     color: gray;
-    margin-bottom: 1rem;
+    margin: .5rem;
     padding: 1rem;
 }
