--- a/instagram-app/src/components/PostContainer/postContainer.css
+++ b/instagram-app/src/components/PostContainer/postContainer.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     width: 50%;
     margin: 5rem auto;
+    background-color:white;
 }
 .user-info {
     width: 100%;
@@ -10,7 +11,7 @@
     justify-content: flex-start;
     align-items: center;
     vertical-align: middle;
-    border: .5px solid lightgrey;
+    border: .5px solid black;
     border-radius: .2rem;
     font-weight: bold;
 
